--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <ul>
     <li><a href="./recipes/chickenwhitehandi.html" target="_blank">Chicken Whitehandi</a></li>
     <li><a href="./recipes/halwapuri.html" target="_blank">Halwa Puri</a></li>
-    <li><a href="" target="_blank">Nihari</a></li>
+    <li><a href="./recipes/muttonnihari.html" target="_blank">Mutton Nihari</a></li>
 </ul>
 </body>
 </html>
